# template.python.package

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  cliff.toml  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  requirements.txt
.github/workflows/: ci.yml  gh-pages.yml  publish-docs.yml
changelog/: index.html
docs/: changelog.md  how.md  index.md
how/: index.html
scripts/: test_watcher.py
search/: search_index.json
setup/: install_task.sh  setup.sh
src/hungovercoders_template_python_package/: __init__.py  greetings.py  organisation.py
src/hungovercoders_template_python_package/schemas/: organisation_schema.json
tests/: test_greetings.py  test_organisation.py
